<resources>
    <string name="app_name">Calculator</string>

    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="point">.</string>

    <string name="equals">=</string>
    <string name="negative">-</string>
    <string name="positive">+</string>
    <string name="divide">÷</string>
    <string name="multiply">x</string>
    <string name="clear">c</string>
    <string name="remove">⌫</string>
    <string name="settings">Settings</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="green_theme">Green Theme</string>
    <string name="pink_theme">Pink Theme</string>
</resources>
